# Dualis

./: Cargo.toml  install.ps1  tauri.conf.json
.github/workflows/: release.yml
src/: ai.rs  copilot.rs  gui.rs  hotkey.rs  main.rs
ui/: index.html  main.js  style.css
